# LFRenderCoreDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yinglun/lfrendercoredemo1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yinglun/lfrendercoredemo1/: DepthGaussianBlur.java  ImageGLSurfaceView.java  MainActivity.java
app/src/main/java/com/yinglun/lfrendercoredemo1/Filter/: NormalFilter.java  OpenGLUtils.java
app/src/main/jni/: CMakeLists.txt  ffmpeg_jni.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yinglun/lfrendercoredemo1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
